sass/header/_main.scss
#header-main {
  background: $black;

  .social-bar {
    @include rem-fallback(padding, 0.5, 0);
    i, a, .text {
      color: $grey;
    }
    a {
      text-decoration: none;
      transition: all 0.3s ease;
      &:hover {
        i, .text {
          transition: all 0.3s ease;
          color: lighten($blue, 30%);
        }
      }
    }
    .float-left {
      float: left;
      i {
        @include rem-fallback(padding-right, 0.5)
      }
    }
    .float-right {
      float: right;
    }
    .social-item {
      float: left;
      &.padding-right {
        @include rem-fallback(padding-right, 1.5);
      }
      i {
        font-size: 1.55em;
      }
      .text {
        font-size: 1.45em;
      }
    }

  }
  .navbar {
    margin-bottom: 0;
    @include rem-fallback(padding-bottom, 0.5);

    .navbar-brand {
      height: 75px;
      padding: 0 0 0 15px;
      img {
        display: inline;
        height: 75px;
      }
      .text {
        color: white;
        text-transform: uppercase;
        font-family: $next;
        font-weight: 600;
        font-size: 1em;
        @include rem-fallback(padding-left, 0.5);
      }
    }
    .navbar-toggle {
      background: $black;
      box-shadow: 0 0 0;
      border: 1px solid $white;
      margin-top: 16.5px;
      .icon-bar {
        background: $white;
      }
    }
    .navbar-collapse {
      padding-top: 20px;
      @include aboveMobile {
        padding-right: 0;
        padding-left: 0;
      }
    }
    .navbar-nav {
      li {
        a {
          transition: all 0.3s ease;
          font-family: $condensed;
          background: $blue;
          color: $white;
          font-size: 1.25em;
          font-weight: 600;
          text-transform: uppercase;
          box-shadow: 0 3px 6px rgba($black, 0.175);
          text-shadow: 0 3px 6px rgba($black, 0.175);
          @include rem-fallback(margin-right, 2);
          @include rem-fallback(padding, 0.25, 0.75);
          &:hover {
            background: $white;
            color: $blue;
          }
          @include mobile {
            background: transparent;
          }
        }
        &:last-child {
          a {
            margin-right: 0;
          }
        }
      }
    }
  }
}

